--- a/wordToVec-checkpoint.ipynb
+++ b/wordToVec-checkpoint.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2c07e46f",
+   "execution_count": 1,
+   "id": "c3b62dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "07f16e1c",
+   "execution_count": 2,
+   "id": "538c32bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "306f8353",
+   "execution_count": 3,
+   "id": "5d8c593c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5a9406f1",
+   "execution_count": 4,
+   "id": "80a66d6e",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "4  Petter Mattei's \"Love in the Time of Money\" is...  positive"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,15 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a016af4b",
+   "execution_count": 5,
+   "id": "38189f11",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\SWADHA\\AppData\\Local\\Temp\\ipykernel_5148\\3006716147.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\SWADHA\\AppData\\Local\\Temp\\ipykernel_2304\\3006716147.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -135,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fe552d7e",
+   "execution_count": 6,
+   "id": "8a05ecaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,15 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c58936a5",
+   "execution_count": 7,
+   "id": "8cd3088a",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\SWADHA\\AppData\\Local\\Temp\\ipykernel_5148\\3753165437.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\SWADHA\\AppData\\Local\\Temp\\ipykernel_2304\\3753165437.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -172,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9500c1f6",
+   "execution_count": 8,
+   "id": "0d5b2a7f",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\SWADHA\\AppData\\Local\\Temp\\ipykernel_5148\\740760900.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\SWADHA\\AppData\\Local\\Temp\\ipykernel_2304\\740760900.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -195,15 +195,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f0000990",
+   "execution_count": 9,
+   "id": "f1954b6c",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\SWADHA\\AppData\\Local\\Temp\\ipykernel_5148\\2826946130.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\SWADHA\\AppData\\Local\\Temp\\ipykernel_2304\\2826946130.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -222,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "be087aee",
+   "execution_count": 10,
+   "id": "1b36483d",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "Name: review, Length: 9983, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "981fe8c6",
+   "execution_count": 11,
+   "id": "5c334bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "94df8415",
+   "execution_count": 12,
+   "id": "23e31ceb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "1b9dce83",
+   "execution_count": 13,
+   "id": "9549dc82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "30407e57",
+   "execution_count": 14,
+   "id": "590c5b88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,17 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "1ed5ea7b",
+   "execution_count": 15,
+   "id": "d0abebc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5875270, 6212140)"
+       "(5875102, 6212140)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,8 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c2d36449",
+   "execution_count": 16,
+   "id": "fa106cb2",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "31845"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "338524fa",
+   "execution_count": 17,
+   "id": "cd881073",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,37 +357,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "26717b6f",
+   "execution_count": 18,
+   "id": "f3962811",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.14358205,  0.47721288,  0.1513792 ,  0.21118633, -0.1468112 ,\n",
-       "       -0.62955576,  0.24262352,  0.97373694, -0.366299  , -0.25915578,\n",
-       "       -0.32564908, -0.4985884 ,  0.11215337,  0.1133271 ,  0.13590665,\n",
-       "       -0.10472312, -0.03360484, -0.34599924, -0.06447577, -0.598857  ,\n",
-       "        0.01587717,  0.28170365,  0.09360457, -0.2822035 , -0.32494047,\n",
-       "       -0.04442078, -0.27094886, -0.04414343, -0.30346394, -0.01683619,\n",
-       "        0.28465092, -0.0248868 ,  0.20043917, -0.2712472 , -0.12050208,\n",
-       "        0.45291957,  0.10875291, -0.4504708 , -0.22100297, -0.7764436 ,\n",
-       "        0.06967316, -0.29666993,  0.03402564, -0.1228613 ,  0.45975187,\n",
-       "       -0.1735847 , -0.27676743, -0.00339058,  0.10725524,  0.34405264,\n",
-       "        0.07430533, -0.36306974, -0.42805   , -0.08420645, -0.12450612,\n",
-       "        0.22979857,  0.20972236,  0.00233762, -0.2862002 ,  0.08931581,\n",
-       "        0.06393985,  0.09577123,  0.0551882 , -0.02753393, -0.3977115 ,\n",
-       "        0.2565763 ,  0.02494488,  0.09277409, -0.3001832 ,  0.33444464,\n",
-       "       -0.32051328,  0.0179102 ,  0.62192637, -0.09083009,  0.42084718,\n",
-       "        0.16925575, -0.02600042, -0.1988882 , -0.47513023,  0.15092891,\n",
-       "       -0.29117742,  0.09943061, -0.40255013,  0.46921337, -0.1432112 ,\n",
-       "       -0.16343763, -0.03376229,  0.21038349,  0.28738514,  0.19603695,\n",
-       "        0.26734093,  0.28176934,  0.06611378,  0.11682718,  0.61266154,\n",
-       "        0.23669733,  0.12307165, -0.19074237, -0.01373722, -0.14339866],\n",
+       "array([-0.19500579,  0.47395   ,  0.10982175,  0.21265514, -0.16454016,\n",
+       "       -0.6123005 ,  0.24750437,  0.9522533 , -0.34340838, -0.23949938,\n",
+       "       -0.35816395, -0.5078326 ,  0.15135   ,  0.12771319,  0.1619567 ,\n",
+       "       -0.11200842, -0.03127691, -0.35999992, -0.07376871, -0.6165504 ,\n",
+       "       -0.04727076,  0.24867408,  0.15174755, -0.2667068 , -0.27815607,\n",
+       "       -0.01852754, -0.32855624, -0.03870194, -0.31468558,  0.06419028,\n",
+       "        0.3477096 ,  0.00113853,  0.21000525, -0.24476133, -0.145968  ,\n",
+       "        0.41844594,  0.08815792, -0.37048647, -0.28395623, -0.7316029 ,\n",
+       "        0.10703624, -0.29359034,  0.06065441, -0.08830866,  0.48513812,\n",
+       "       -0.1461118 , -0.3043291 , -0.07078991,  0.11947974,  0.3988134 ,\n",
+       "        0.0971474 , -0.3066378 , -0.46228358, -0.11712016, -0.12346283,\n",
+       "        0.23446   ,  0.213803  , -0.01309385, -0.3057335 ,  0.13142031,\n",
+       "        0.08235797,  0.10622223,  0.05619866, -0.07430473, -0.39893958,\n",
+       "        0.26789576,  0.07230124,  0.08806387, -0.34280676,  0.29077336,\n",
+       "       -0.28300875,  0.00546369,  0.5811766 , -0.0488127 ,  0.4597274 ,\n",
+       "        0.14390056, -0.04511701, -0.13901596, -0.527959  ,  0.1456538 ,\n",
+       "       -0.271946  ,  0.07732517, -0.4334822 ,  0.543295  , -0.10913049,\n",
+       "       -0.10917629, -0.02251343,  0.16379063,  0.22592686,  0.14819597,\n",
+       "        0.29845196,  0.25447878,  0.01631488,  0.07968894,  0.63505894,\n",
+       "        0.2721977 ,  0.1970492 , -0.15301849,  0.00271686, -0.15542927],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,8 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d0a684f4",
+   "execution_count": 19,
+   "id": "d5c5b7ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,15 +408,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb99b072",
+   "execution_count": 20,
+   "id": "648fcfc6",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|█████████████████████████████████▌                                            | 4289/9983 [07:27<09:31,  9.97it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 9983/9983 [17:09<00:00,  9.70it/s]\n"
      ]
     }
    ],
@@ -428,8 +428,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "441f9bcf",
+   "execution_count": 21,
+   "id": "f8e1c73f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,18 +438,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "287cf0f9",
+   "execution_count": 22,
+   "id": "3cf85c7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.19500579,  0.47395   ,  0.10982175,  0.21265514, -0.16454016,\n",
+       "       -0.6123005 ,  0.24750437,  0.9522533 , -0.34340838, -0.23949938,\n",
+       "       -0.35816395, -0.5078326 ,  0.15135   ,  0.12771319,  0.1619567 ,\n",
+       "       -0.11200842, -0.03127691, -0.35999992, -0.07376871, -0.6165504 ,\n",
+       "       -0.04727076,  0.24867408,  0.15174755, -0.2667068 , -0.27815607,\n",
+       "       -0.01852754, -0.32855624, -0.03870194, -0.31468558,  0.06419028,\n",
+       "        0.3477096 ,  0.00113853,  0.21000525, -0.24476133, -0.145968  ,\n",
+       "        0.41844594,  0.08815792, -0.37048647, -0.28395623, -0.7316029 ,\n",
+       "        0.10703624, -0.29359034,  0.06065441, -0.08830866,  0.48513812,\n",
+       "       -0.1461118 , -0.3043291 , -0.07078991,  0.11947974,  0.3988134 ,\n",
+       "        0.0971474 , -0.3066378 , -0.46228358, -0.11712016, -0.12346283,\n",
+       "        0.23446   ,  0.213803  , -0.01309385, -0.3057335 ,  0.13142031,\n",
+       "        0.08235797,  0.10622223,  0.05619866, -0.07430473, -0.39893958,\n",
+       "        0.26789576,  0.07230124,  0.08806387, -0.34280676,  0.29077336,\n",
+       "       -0.28300875,  0.00546369,  0.5811766 , -0.0488127 ,  0.4597274 ,\n",
+       "        0.14390056, -0.04511701, -0.13901596, -0.527959  ,  0.1456538 ,\n",
+       "       -0.271946  ,  0.07732517, -0.4334822 ,  0.543295  , -0.10913049,\n",
+       "       -0.10917629, -0.02251343,  0.16379063,  0.22592686,  0.14819597,\n",
+       "        0.29845196,  0.25447878,  0.01631488,  0.07968894,  0.63505894,\n",
+       "        0.2721977 ,  0.1970492 , -0.15301849,  0.00271686, -0.15542927],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c16b9ee5",
+   "execution_count": 23,
+   "id": "92baabf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,18 +492,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "42bbf10a",
+   "execution_count": 24,
+   "id": "3fbe3d2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, ..., 0, 0, 1])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7fc654dc",
+   "execution_count": 25,
+   "id": "b71a7702",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,8 +525,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "594c6ae0",
+   "execution_count": 26,
+   "id": "5835aee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,10 +536,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0dab034c",
+   "execution_count": 27,
+   "id": "7251914e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7606409614421632"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rf = RandomForestClassifier()\n",
     "rf.fit(X_train,y_train)\n",
@@ -508,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b269c01",
+   "id": "b685b239",
    "metadata": {},
    "outputs": [],
    "source": []
